--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.34",
     "eslint": "^8.57.0",
+    "file-loader": "^6.2.0",
     "prettier": "^3.2.5",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.3",
